2006-03-13  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/teslet/java/lang/ClassLoader/initialize.java: Added comments.

2006-03-13  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JInternalFrame/setSelected.java: New test.

2006-03-13  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/accessibility/AccessibleContext/TestAccessibleContext.java:
	New auxiliary helper class.
	* gnu/testlet/javax/accessibility/AccessibleContext/getAccessibleRelationSet.java:
	New test.

2006-03-11  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/zip/GZIPInputStream/PR24461.java: New file.

2006-03-11  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/event/TreeSelectionEvent/cloneWithSource.java: 
	New file,
	* gnu/testlet/javax/swing/event/TreeSelectionEvent/constructors.java: 
	Likewise,
	* gnu/testlet/javax/swing/event/TreeSelectionEvent/isAddedPath.java: 
	Likewise.

2006-03-10  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Button/PaintTest.java: New Test.
	* gnu/testlet/java/awt/Canvas/PaintTest.java: New Test.
	* gnu/testlet/java/awt/Checkbox/PaintTest.java: New Test.
	* gnu/testlet/java/awt/Label/PaintTest.java: New Test.
	* gnu/testlet/java/awt/List/ScrollbarPaintTest.java: New Test.
	* gnu/testlet/java/awt/ScrollPane/ScrollbarPaintTest.java: New Test.
	* gnu/testlet/java/awt/Scrollbar/ScrollbarPaintTest.java: New Test.
	* gnu/testlet/java/awt/TextArea/ScrollbarPaintTest.java: New Test.
	* gnu/testlet/java/awt/TextField/PaintTest.java: New Test.
	* gnu/testlet/java/awt/Choice/PaintTest.java: New Test.

2006-03-10  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* gnu/testlet/java/beans/Introspector/A.java: Added not-a-test
	tag.
	* gnu/testlet/java/beans/Introspector/B.java: Likewise.
	* gnu/testlet/java/beans/Introspector/C.java: Likewise.

2006-03-10  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/Graphics/TestPaintGraphics.java: Fix test.
